--- a/index.html
+++ b/index.html
@@ -2,21 +2,36 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title> Anastasiya Dorash - Recruitment task</title>
-    <link rel="stylesheet" type="text/css" href="src/css/main.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <script type="text/javascript" src="main.js"> </script>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<title> Anastasiya Dorash - Recruitment task</title>
+	<link rel="stylesheet" type="text/css" href="src/css/main.css" />
+	<script type="text/javascript" src="src/js/main.js">
+	</script>
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <img src="images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_16_9,c_fill,g_auto__c_scale,w_596.jpg" alt="HTML5 Icon" style="width:505px;height:330px;">
-    <h1>Lore Ipsum</h1>
-    <p>
-        Infinitely scalable, feature-rich and cloud-native data management and protection for modern and legacy infrastructures and SaaS platforms, managed via a single app with no hardware required.
-    </p>
+	<img src="images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_1400.jpg" alt="HTML5 Icon" style="width:505px;height:330px;">
+	<h1>Lorem Ipsum</h1>
+	<p>
+		Infinitely scalable, feature-rich and cloud-native data management and protection for modern and legacy infrastructures and SaaS platforms, managed via a single app with no hardware required.
+	</p>
+
+	<input type="button" onclick="location.href='#popup';" value="Button" />
+	<a href="#popup" class="header_phone popup-link"></a>
+	<div id="popup" class="popup">
+		<a href="#" class="popup_area"></a>
+	<div class="popup_body">
+		<div class="popup_content">
+			<a href="#" class="popup_close">X</a>
+			<div class="popup_title">Alert!</div>
+				<div class="popup_text">You have clicked X times to related button.</div>
+		</div>
+		</div>
+	</div>
 </body>
